[package]
name = "just_prim_int"
version = "0.1.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv
description = "Primitive integer marker traits"
documentation = "https://docs.rs/just_prim_int"
readme = "README.md"
repository = "https://github.com/JohnScience/just_prim_int"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["primitive", "integer"]
categories = ["no-std"]
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
include = [
    "/Cargo.toml",
    "/LICENSE_APACHE",
    "/LICENSE_MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
# publish | not needed
# metadata | not needed
# default-run | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false
# resolver | not needed


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# https://doc.rust-lang.org/beta/unstable-book/language-features/marker-trait-attr.html
marker_trait_attr = []

[dependencies]
